src/objects/RelatedCountries__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <description>Text format of country for searching purposes.</description>
        <label>Country Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WIN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>WIN record to associate the country with.</description>
        <label>WIN</label>
        <referenceTo>WIN__c</referenceTo>
        <relationshipName>Related_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Countries</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Case__c</columns>
        <columns>WIN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Countries</label>
    </listViews>
    <nameField>
        <displayFormat>Countries-{0000}</displayFormat>
        <label>Countries</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_enter_a_Country</fullName>
        <active>true</active>
        <description>Must enter a country to save the record</description>
        <errorConditionFormula>TEXT(Country__c)=&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>A country must be selected before a record can be saved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RC_Only_choose_one_WIN_or_Case</fullName>
        <active>true</active>
        <description>Can only choose either a WIN or a Case to associate this record to.</description>
        <errorConditionFormula>(IF(ISBLANK(WIN__c)=TRUE, 0,1) + IF(ISBLANK( Case__c)=TRUE, 0, 1))&gt;1</errorConditionFormula>
        <errorMessage>You may associate a single Case or WIN to this record.</errorMessage>
    </validationRules>
</CustomObject>